@@ -11,6 +11,7 @@
     + Added Vaults (Certificate andf password storing);
     + Added Tools->Duplicate subnets & IP page;
     + Added config.php offline_mode to disable server-side Internet lookups (#3462);
+    + Added MAC vendor lookup widget;
 
     Enhancements, changes:
     ----------------------------
